Added github C attribute overrides

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+# All header files should be detected as C project files
+.h linguist-language=C
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
