--- a/SPTHv/SPTHv.vcxproj
+++ b/SPTHv/SPTHv.vcxproj
@@ -138,6 +138,8 @@
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\sh%40dow\EPT\SPTHv\EPT.c" />
+    <ClCompile Include="..\..\..\sh%40dow\EPT\SPTHv\Memory.c" />
     <ClCompile Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Guest.c" />
     <ClCompile Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Handler.c" />
     <ClCompile Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Log.c" />
@@ -147,6 +149,9 @@
     <ClCompile Include="VMX.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\sh%40dow\EPT\SPTHv\EPT.h" />
+    <ClInclude Include="..\..\..\sh%40dow\EPT\SPTHv\GuestTarget.h" />
+    <ClInclude Include="..\..\..\sh%40dow\EPT\SPTHv\Memory.h" />
     <ClInclude Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Guest.h" />
     <ClInclude Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Handler.h" />
     <ClInclude Include="..\..\..\sh%40dow\HV-Playground\SPTHv\Log.h" />
